# jalla

./: Jalla.hs  LICENSE  README  Setup.hs  TODO  get_lapacke.sh  jalla.cabal  set_env.bash  test.hs
BLAS/Foreign/: BLAS.chs  BlasOps.hs  LAPACKE.chs  LapackeOps.hs
CBLAS/: SConstruct
Jalla/: IMM.hs  InnerProduct.hs  Matrix.hs  Test.hs  Types.hs  Vector.hs
Jalla/BLAS/Foreign/: BLAS.chs  BlasOps.hs  LAPACKE.chs  LapackeOps.hs
Jalla/Foreign/: LAPACKE.chs
Math/: IMM.hs  Indexable.hs  InnerProduct.hs  Internal.hs  Internal.hs~  Matrix.hs  Matrix.hs~  Test.hs  Types.hs  Vector.hs
Math/Jalla/: VectorSpace.hs
Numeric/: Jalla.hs
Numeric/Jalla/: CVector.hs  IMM.hs  Indexable.hs  InnerProduct.hs  Internal.hs  Matrix.hs  Test.hs  Types.hs  Vector.hs
Numeric/Jalla/Foreign/: BLAS.chs  BLAS.hs  BlasOps.hs  LAPACKE.chs  LAPACKE.hs  LapackeOps.hs
lapacke/: SConstruct
parseblas/: classes.hs  parseblas.hs  parselapacke.hs  parselapacke.hs.old  parsenew.hs
test/: test.cabal  test.hs
tests/: Test.hs
