name: jalla
version: 0.1
cabal-version: (>=1.2)
build-type: Simple
license: BSD3
license-file: LICENSE
copyright:
maintainer: Christian Gosch <werbung@goschs.de>
build-depends: base (>=4), haskell98 -any, mtl -any,
               convertible -any, array -any
stability: Experimental
homepage: https://github.com/cgo/jalla
package-url:
bug-reports:
synopsis: Aims to provide higher level functions for linear algebra and comes with wrappers around BLAS and LAPACKE.
description: Jalla aims at providing high level functions for linear algebra computations which
  should be fast and easy enough to use. Under the hood, BLAS and LAPACKE are used 
  (LAPACKE is a standard C interface to LAPACK which is part of LAPACK since version 3.4).
  Currently, I am adding new functions whenever I find some time. Please help, if you want to!
  Tests are still missing, and we need some nicer error reporting (nicer than exceptions).
category: Math
author: Christian Gosch
tested-with: GHC (>= 7.0.3)
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Math.Indexable Math.IMM Math.InnerProduct
                 BLAS.Foreign.BLAS BLAS.Foreign.BlasOps BLAS.Foreign.LAPACKE
                 BLAS.Foreign.LapackeOps Math.Matrix Math.Vector Math.Types
exposed: True
buildable: True
build-tools: c2hs -any
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries: lapacke lapack cblas f77blas
extra-lib-dirs: /home/christian/pgm/jalla/lapacke
includes:
install-includes:
include-dirs: /home/christian/pgm/jalla/lapacke/include
hs-source-dirs: .
other-modules: C2HS Math.Internal
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: